<resources>

    <string name="app_name">Maths Tutor</string>

    <!--add challenge/activity_mta-->
    <string name="hint_challengeName">Challenge Name</string>
    <string name="hint_challengeMinNum">Minimum Number </string>
    <string name="hint_challengeMaxNum">Maximum Number </string>
    <string name="radio_addition">Addition (+)</string>
    <string name="radio_subtraction">Subtraction (-)</string>
    <string name="radio_division">Division (÷)</string>
    <string name="radio_multiplication">Multiplication (×)</string>
    <string name="radio_type_title">Choose A Challenge Type: </string>


    <!--card-->
    <string name="card_challengeMinNum">Minimum Number: </string>
    <string name="card_challengeMaxNum">Maximum Number: </string>

    <!--Begin Challenge Button-->
    <string name="button_startChallenge">Start</string>


    <string name="button_addChallenge">Add Challenge</string>
    <string name="menu_addChallenge">Add</string>
    <string name="menu_stats">Statistics</string>
    <string name="menu_youtube">Videos</string>
    <string name="menu_back">Back</string>
    <string name="menu_finishChallenge">Finish</string>




    <string name="menu_cancelChallenge">Cancel</string>
    <string name="enter_challenge_name"> Please enter a Challenge Name </string>
    <string name="save_challenge"> Save Challenge </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_challenge_image">Select challenge image</string>
    <string name="change_challenege_image">Change challenge image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_deleteChallenge">Delete</string>
    <string name="title_activity_placemark_maps">Map of all Placemarks</string>

    <string name="btn_ytAddition">Play Addition Playlist</string>
    <string name="btn_ytSubtraction">Play Subtraction Playlist</string>
    <string name="btn_ytDivision">Play Division Playlist</string>
    <string name="btn_ytMultiplication">Play Multiplication Playlist</string>
    <string name="btnStop">Stop</string>

</resources>
