<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context="org.wit.mathstutorappv2.activities.MTAActivity">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#9C4580F5"
    >

        <android.support.design.widget.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:fitsSystemWindows="true"
                app:elevation="0dip"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbarAdd"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:titleTextColor="@color/colorPrimary"
                    android:layout_alignTop="@+id/appBarLayout"/>

        </android.support.design.widget.AppBarLayout>

        <ScrollView

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/appBarLayout"
                android:fillViewport="true">

            <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <android.support.design.widget.TextInputEditText
                        android:background="#CACACA"
                        android:id="@+id/challengeName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/hint_challengeName"
                        android:inputType="text"
                        android:maxLength="25"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="14sp"/>

                <android.support.design.widget.TextInputEditText
                        android:background="#CACACA"

                        android:id="@+id/challengeMinNum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/hint_challengeMinNum"
                        android:inputType="number"
                        android:maxLength="25"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="14sp"/>

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/challengeMaxNum"
                        android:background="#CACACA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/hint_challengeMaxNum"
                        android:inputType="number"
                        android:maxLength="25"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="14sp"/>
                <RadioGroup
                        android:id="@+id/radio_group_type"
                        android:layout_width="423dp"
                        android:layout_height="156dp"
                        android:layout_margin="10dp">
                    <TextView

                            android:id="@+id/radio_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/radio_type_title"
                            android:textStyle="bold"
                            android:textSize="24sp"
                            android:fontFamily="@font/amiri" android:textColor="#DD020202"/>
                    <RadioButton
                            android:id="@+id/radioAddition"
                            android:text="@string/radio_addition"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>
                    <RadioButton
                            android:id="@+id/radioSubtraction"
                            android:text="@string/radio_subtraction"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>

                    <RadioButton
                            android:id="@+id/radioDivision"
                            android:text="@string/radio_division"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>
                    <RadioButton
                            android:id="@+id/radioMultiplication"
                            android:text="@string/radio_multiplication"
                            android:layout_width="158dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>
                </RadioGroup>

                <Button
                        android:id="@+id/btnAdd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:background="#C06503"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:stateListAnimator="@null"
                        android:text="@string/button_addChallenge"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"/>

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>