<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 tools:context="org.wit.mathstutorappv2.activities.MTAYoutubeActivity">



    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_below="@id/toolbarMain"
            android:fillViewport="true">

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">


            <!-- Addition section-->
            <TextView
                    android:text="──Addition Playlist──"
                    android:layout_margin="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/titleAddition" android:textSize="24sp"
                    android:textStyle="bold" android:textAlignment="center"/>

                <com.google.android.youtube.player.YouTubePlayerView
                        android:id="@+id/youtubePlayerAddition"
                        android:layout_margin="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>


                <Button
                        android:id="@+id/btnPlayAddition"
                        android:layout_marginTop="18dp"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/btn_ytAddition"/>
                <Button
                        android:id="@+id/btnStopADD"
                        android:layout_marginTop="0dp"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/btnStop"/>
            <TextView
                    android:text='This playlist aims to teach people how to do basic addition. The playlist will run through three different videos, going into great detail on how to solve addition problems. \nNOTE: Videos can be navigated through the YouTube videos arrows. \n\nContents: \n1.) "Maths - Two digit addition with carryover" by Bodhaguru \n2.) "Math Antics - Multi-Digit Addition" by Math Antics \n3.) "Addition in Maths" by tecmath \n\n Once you feel confident to move on from the current playlist, please press the Stop button below the video and move on to the next playlist.'
                    android:layout_margin="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/additionDesc"/>


            <!-- Subtraction section-->
            <TextView
                    android:text="──Subtraction Playlist──"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/titleSubtraction" android:textSize="24sp"
                    android:textStyle="bold" android:textAlignment="center"/>

                <com.google.android.youtube.player.YouTubePlayerView
                        android:id="@+id/youtubePlayerSubtraction"
                        android:layout_margin="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>


                <Button
                        android:id="@+id/btnPlaySubtraction"
                        android:layout_marginTop="18dp"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/btn_ytSubtraction"/>
                <Button
                        android:id="@+id/btnStopSUB"
                        android:layout_marginTop="0dp"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/btnStop"/>

                <TextView
                        android:text='This playlist aims to teach people how to do basic subtraction. The playlist will run through four different videos, going into great detail on how to solve subtraction problems. Each video helps with harder problems than the one before. \nNOTE: Videos can be navigated through the YouTube videos arrows. \n\nContents: \n1.) "Math Antics - Multi-Digit Subtraction" by Math Antics \n2.) "Maths - Three digit subtraction - English" by Bodhaguru \n3.) "Subtracting - Large numbers" by Math Meeting \n4.) "Subtraction Trick - avoid the borrowing! Easy maths lesson." by tecmath \n\n Once you feel confident to move on from the current playlist, please press the Stop button below the video and move on to the next playlist.'
                        android:layout_margin="6dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/subtractionDesc"/>


            <!-- Division section-->
            <TextView
                    android:text="──Division Playlist──"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/titleDivision" android:textSize="24sp"
                    android:textStyle="bold" android:textAlignment="center"/>

            <com.google.android.youtube.player.YouTubePlayerView
                    android:id="@+id/youtubePlayerDivision"
                    android:layout_margin="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            <Button
                    android:id="@+id/btnPlayDivision"
                    android:layout_marginTop="18dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/btn_ytDivision"/>

            <Button
                    android:id="@+id/btnStopDIV"
                    android:layout_marginTop="0dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/btnStop"/>
            <TextView
                    android:text='This playlist aims to teach people how to do basic and advanced division. The playlist will run through four different videos, going into great detail on how to solve division problems. Each video helps with harder problems than the one before and even goes into working with decimals for the last video. \nNOTE: Videos can be navigated through the YouTube videos arrows. \n\nContents: \n1.) "Math Antics - Basic Division" by Math Antics \n2.) "Math Antics - Long Division" by Math Antics \n3.) "Math Antics - Long Division with 2-Digit Divisors" by Math Antics \n4.) "Dividing Decimals - Not So Easy!" by The Organic Chemistry Tutor \n\n Once you feel confident to move on from the current playlist, please press the Stop button below the video and move on to the next playlist.'
                    android:layout_margin="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/divisionDesc"/>


            <!-- Multiplication section-->
            <TextView
                    android:text="──Multiplication Playlist──"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/titleMultiplication" android:textSize="24sp"
                    android:textStyle="bold" android:textAlignment="center"/>

            <com.google.android.youtube.player.YouTubePlayerView
                    android:id="@+id/youtubePlayerMultiplication"
                    android:layout_margin="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            <Button
                    android:id="@+id/btnPlayMultiplication"
                    android:layout_marginTop="18dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/btn_ytMultiplication"/>

            <Button
                    android:id="@+id/btnStopMUL"
                    android:layout_marginTop="0dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/btnStop"/>

            <TextView
                    android:text='This playlist aims to teach people how to do basic and advanced multiplication. The playlist will run through four different videos, going into great detail on how to solve division problems. Each video helps with harder problems than the one before and even goes into working with decimals for the last video similarily to the last video in the division playlist. \nNOTE: Videos can be navigated through the YouTube videos arrows. \n\nContents: \n1.) "Math Antics - Multi-Digit Multiplication Pt 1" by Math Antics \n2.) "Math Antics - Multi-Digit Multiplication Pt 2" by Math Antics \n3.) "Multiplying - Large numbers" by Math Meeting \n4.) "Multiplying Decimals Made Easy!" by The Organic Chemistry Tutor \n\n Once you feel confident to move on from the current playlist, please press the Stop button below the video and move on to the next playlist.'
                    android:layout_margin="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/multiplicationDesc"/>
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>